2017-12-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-interrupt-process): Fall back to the default
	implementation if there's no success.

2017-12-08  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.3.3 released.

	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file):
	Fix a bug when renaming.

2017-12-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-truename): Handle several
	trailing slashes correctly.

	* tramp-compat.el (tramp-compat-file-name-quote): Do not quote
	if it is quoted already.

	* tramp-smb.el (tramp-smb-handle-insert-directory):
	Use `copy-tree' but `copy-sequence'.

2017-12-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-drop-volume-letter)
	(tramp-handle-find-backup-file-name): Revert change from
	2017-11-20.  Emacs' `make-backup-file-name-1' handles this
	case now.

2017-11-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-directory-file-name): Handle several
	trailing slashes correctly.
	(tramp-handle-file-selinux-context): New defun.

	* tramp-adb.el (tramp-adb-file-name-handler-alist):
	* tramp-gvfs.el (tramp-gvfs-file-name-handler-alist):
	* tramp-smb.el (tramp-smb-file-name-handler-alist):
	Use `tramp-handle-file-selinux-context'.

2017-11-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-autoload-file-name-regexp): Do not use "\\'"
	in regexp.  (Bug#29163)
	(top) Do not run (tramp-register-autoload-file-name-handlers)
	when loading tramp.el.

2017-11-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-handle-file-local-copy):
	Move error message up.

2017-11-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-drop-volume-letter): Handle also backup file names.
	(tramp-handle-find-backup-file-name):
	Call `tramp-drop-volume-letter' on the results.  (Bug#29149)

2017-11-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-truename): Expand localname.
