@@ -1,3 +1,14 @@
+2017-12-16  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-accept-process-output):
+	* tramp-adb.el (tramp-adb-handle-start-file-process):
+	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band)
+	(tramp-sh-handle-start-file-process):
+	* tramp-smb.el (tramp-smb-handle-copy-directory)
+	(tramp-smb-handle-file-acl, tramp-smb-handle-process-file)
+	(tramp-smb-handle-set-file-acl)
+	(tramp-smb-handle-start-file-process): Suppress timers.
+
 2017-12-11  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-interrupt-process): Fall back to the default
